# ikt218-advanced-operating-systems

./: .gitignore  CMakeLists.txt  README.md
config/: QEMURunner.sh.in  build-cross-compiler.sh
src/arch/i386/: linker.ld
src/boot/: CMakeLists.txt
src/boot/i386/: boot.asm  boot.s
src/boot/src/: boot.cpp
src/cpu/i386/: CMakeLists.txt  gdt.c  gdt.h  gdt.s  hardware.h  hardware_port.h  idt.c  idt.h  idt.s  irq.c  irq.h  irq.s  isr.c  isr.h  isr.s
src/grub/: CMakeLists.txt  grub.cfg.in
src/kernel/: CMakeLists.txt  main.cpp
src/kernel/cpu/: CMakeLists.txt
src/kernel/cpu/i386/: gdt.c  gdt.h  hardware_port.h  idt.c  idt.h  isr.c  isr.cpp  isr.h  isr_a.asm
src/kernel/cpu/i386/timer/: timer.c  timer.h
src/kernel/cpu/include/: cpu.h
src/kernel/drivers/: CMakeLists.txt
src/kernel/drivers/_include/: driver.h
src/kernel/drivers/keyboard/: keyboard.cpp  keyboard.h
src/kernel/drivers/monitor/: monitor_2.cpp  monitor_2.h
src/kernel/memory/: CMakeLists.txt  kmalloc.cpp  kmalloc.h  paging.cpp  paging.h
src/kernel/memory/paging/: paging.cpp  paging.h
src/kernel/src/modules/: CMakeLists.txt
src/kernel/src/modules/io/display/: CMakeLists.txt  display_1.cpp  display_2.cpp  display_2.h
src/kernel/src/modules/io/display/include/: display.h
src/kernel/src/modules/stdlib/: CMakeLists.txt  uiastdlib.cpp
src/kernel/src/system/: main.cpp
src/kernel/stdlib/: CMakeLists.txt  uiastdlib.h
src/kernel/stdlib/stdlib/c/: libc.h
src/kernel/stdlib/stdlib/cpp/: kmalloc.cpp
src/sdk/lua/: CMakeLists.txt
src/sdk/musl/: CMakeLists.txt
src/stdlib/: CMakeLists.txt
src/stdlib/stdlib/cpp/: bitset.cpp  kmalloc.cpp  kmalloc.h
